Fixing scrolling on tablet/mobile

--- a/mobile_format.css
+++ b/mobile_format.css
@@ -25,7 +25,9 @@ body {
 
 /* -----Content Box----- */
 .content-box{
-    margin-top: -30px;
+    margin-top: -40px;
+    margin-left: 0px;
+    align-content: center;
 }
 
 /* -----Header----- */
@@ -40,6 +42,7 @@ body {
   height: 200px;
   margin: 0 auto 15px;
   align-content: center;
+  margin-top: -40px;
 }
 
 .header h1 {
@@ -54,7 +57,8 @@ body {
 }
 
 .subtext {
-  font-size: 0.95rem;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 /* -----Button Grid----- */
@@ -74,7 +78,26 @@ footer {
 footer a {
   padding: 8px 14px;
   border-radius: 12px;
-  font-size: 0.85rem;
+  font-size: 1rem;
   color: #fbf9f7;
   background: #b85b04
+}
+
+/*----- PORTFOLIO -----*/
+
+.portfolio-content-box {
+  margin-top: 30px;
+}
+
+.return-button a{
+  align-content: center;
+  text-align: center;
+  align-items: center;
+  margin-left: -10px;
+}
+
+.portfolio-subtext {
+  text-align: center;
+  margin-left: -25px;
+  font-size: 1.5rem;
 }
