--- a/portfolio/portfolio_style.css
+++ b/portfolio/portfolio_style.css
@@ -49,8 +49,26 @@ Footer button text color: white
   margin-left: 15px;
 }
 
-.subtext {
-  margin-left: -30px;
+.portfolio-subtext {
+  font-family: "Dropline", sans-serif;
+  font-size: 1.1rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin-left: 0px;
+  text-align: left;
+}
+
+/* ----- Portfolio Content Box----- */
+.portfolio-content-box {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  max-width: 900px;
+  width: 100%;
+  border-radius: 20px;
+  padding: 10px;
+  z-index: 1;
 }
 
 /* -----Portfolio Grid----- */
