--- a/style_palette.css
+++ b/style_palette.css
@@ -103,6 +103,7 @@ body::before {
   position: relative;
   object-fit: cover;
   margin-left: -100px;
+  margin-top: -30px;
   box-shadow: 2px 4px 12px rgba(0,0,0,0.3);
 }
 .header h1 {
